# Chrono-Tensorial-Flux-Calculus-CTFC-

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
ctfc/: __init__.py
ctfc/core/: chrono_derivative.py  covariance.py  curvature.py  embedding.py  flux.py  memory.py  spectral.py  trace.py
ctfc/discrete/: ctfc_approx.py  defaults.py  safeguards.py
ctfc/geometry/: laplacian.py  metrics.py  similarity.py
ctfc/theory/: assumptions.md  guarantees.md  operator_map.md
ctfc/utils/: logging.py  reproducibility.py  validation.py
docs/: index.md  motivation.md
