[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# ============================================================
# PROJECT METADATA (PEP 621)
# ============================================================

[project]
name = "ctfc"
version = "0.1.0"

description = "Chrono-Tensorial Flux Calculus (CTFC): A geometric framework for spatiotemporal dynamics with memory, flux, and curvature"

readme = "README.md"

requires-python = ">=3.10"

license = { text = "MIT" }

authors = [
    { name = "Dhruvil Chodvadiya", email = "dhruvil@example.edu" }
]

maintainers = [
    { name = "Dhruvil Chodvadiya", email = "dhruvil@example.edu" }
]

keywords = [
    "spatiotemporal dynamics",
    "non-Markovian systems",
    "information geometry",
    "covariance manifolds",
    "flux geometry",
    "temporal memory",
    "curvature",
    "dimensionality reduction",
    "applied mathematics",
    "machine learning"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries"
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "networkx>=3.2",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "pyyaml>=6.0"
]

# ============================================================
# OPTIONAL DEPENDENCIES
# ============================================================

[project.optional-dependencies]

dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=24.1",
    "isort>=5.13",
    "ruff>=0.2",
    "mypy>=1.8",
    "pre-commit>=3.6"
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24"
]

experiments = [
    "yfinance>=0.2",
    "arch>=6.3",
    "statsmodels>=0.14"
]

notebooks = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29"
]

all = [
    "ctfc[dev,docs,experiments,notebooks]"
]

# ============================================================
# PROJECT URLS
# ============================================================

[project.urls]
Homepage = "https://github.com/yourusername/chrono-tensorial-flux"
Repository = "https://github.com/yourusername/chrono-tensorial-flux"
Documentation = "https://github.com/yourusername/chrono-tensorial-flux/tree/main/docs"
Paper = "https://arxiv.org/abs/XXXX.XXXXX"
Issues = "https://github.com/yourusername/chrono-tensorial-flux/issues"

# ============================================================
# SETUPTOOLS CONFIGURATION
# ============================================================

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["ctfc*"]

# ============================================================
# PYTEST CONFIGURATION
# ============================================================

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

# ============================================================
# BLACK (FORMATTER)
# ============================================================

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

# ============================================================
# ISORT (IMPORT SORTING)
# ============================================================

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["ctfc"]

# ============================================================
# RUFF (LINTING)
# ============================================================

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B"]
ignore = ["E501"]

# ============================================================
# MYPY (STATIC TYPING)
# ============================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# ============================================================
# COVERAGE
# ============================================================

[tool.coverage.run]
branch = true
source = ["ctfc"]

[tool.coverage.report]
show_missing = true
skip_covered = true

